SignalR connection established with Winform

--- a/BlazorApp2/Pages/Index.razor
+++ b/BlazorApp2/Pages/Index.razor
@@ -22,6 +22,8 @@
 <input @bind="e.Name" />
 <label>Phone No.</label>
 <input @bind="e.PhoneNo" />
+<label>Client Id</label>
+<input @bind="e.clientid" />
 <button @onclick="IncrementCount">SUBMIT</button>
 
 
